minor fix on small navbar color

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -4,7 +4,7 @@ header {
 
 nav{
   margin-bottom: 0px;
-  max-height: 1em;
+  max-height: 4.5em;
 }
 
 .navbar-brand {
